update spring-boot to 3.2.5 for security-custom-auth